updating the notebook

--- a/Investigate_a_Dataset.ipynb
+++ b/Investigate_a_Dataset.ipynb
@@ -70,10 +70,7 @@
     "### Do people with welfare program showed up more than those who don't?\n",
     "### Is there a relation between gender and showing up?\n",
     "### is there a relation between age and showing up?\n",
-    "### Do people who recived an sms show up more?\n",
-    "\n",
-    "#### The dependent  varible is \"Showing up\"\n",
-    "#### the independent  varibles are \"welfare\", \"Gender\", \"Age\", and \"sms received\""
+    "### Do people who recived an sms show up more?\n"
    ]
   },
   {
